# Financial

./: CMakeLists.txt  README.md  cal.py  main.cpp  nubankreader.cpp  nubankreader.h  oi.enc  pay.cpp  pay.h  pay.py  planner.cpp  t.py
Planner/: planner.hpp  plannerwidget.cpp  plannerwidget.h
libs/: category_en.txt
